--- a/styles/FooterSection.module.scss
+++ b/styles/FooterSection.module.scss
@@ -1,3 +1,28 @@
 .footerSection {
-  
+  --width: 0;
+  --columns: 12;
+  display: flex;
+  font-size: var(--fs-small);
+  justify-content: center;
+  flex-direction: column;
+  flex-basis: calc(var(--width) / var(--columns) * 100%);
+  padding: 10px 25px;
+  box-sizing: border-box;
+
+  & div {
+    text-align: center;
+  }
+
+  /* one section across */
+  @media screen and (max-width: 599px) {
+    --width: 12;
+  }
+  /* two sections across */
+  @media screen and (max-width: 899px) and (min-width: 600px) {
+    --width: 6;
+  }
+  /* three sections across */
+  @media screen and (min-width: 900px) {
+    --width: 4;
+  }
 }
