--- a/styles/FooterSection.module.scss
+++ b/styles/FooterSection.module.scss
@@ -13,6 +13,23 @@
     text-align: center;
   }
 
+  & table {
+    text-align: left;
+    margin: 0 auto;
+    & td {
+      padding: 3px;
+    }
+    & tr td:nth-child(1) {
+      font-weight: bold;
+      text-align: center;
+    }
+  }
+
+  & button {
+    font-size: 1rem;
+    margin: 0 auto;
+  }
+
   /* one section across */
   @media screen and (max-width: 599px) {
     --width: 12;
