added hr to footer section

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -3,3 +3,11 @@
   flex-wrap: wrap;
   justify-content: space-around;
 }
+
+.footerHR {
+  width: 80%;
+  height: 3px;
+  border: 0px;
+  background-color: black;
+  margin-top: 20px;
+}
