centered content next to image #2

--- a/styles/ImageSection.module.scss
+++ b/styles/ImageSection.module.scss
@@ -14,9 +14,8 @@
 .textWrapper {
   display: flex;
   flex-direction: column;
-  @media screen and (max-width:650px) {
-    align-items: center;
-  }
+  align-items: center;
+  justify-content: center;
 }
 
 .textWrapper p {
