--- a/styles/ImageSection.module.scss
+++ b/styles/ImageSection.module.scss
@@ -6,15 +6,17 @@
   flex-direction: row;
   width: 80%;
   height: fit-content;
+  padding-bottom: 20px;
   margin: 0 auto;
   align-items: center;
-  @media screen and (max-width:650px) {
+  @media screen and (max-width:850px) {
     flex-direction: column;
   }
 }
 
 .textWrapper {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -33,6 +35,9 @@
 .imageWrapper {
   display: flex;
   justify-content: center;
-  padding: 0px 50px 0px 0px;
+  padding: 0px;
+  @media screen and (min-width:851px) {
+    padding: 0px 50px 0px 0px;
+  }
 }
 
